tests/invalid/indentation7.nt
# missing indentation
ingredients:
- green chilies
